<resources>
    <string name="app_name">Descartes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Show and Control</string>
    <string name="nav_header_subtitle">XYZ</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Data</string>
    <string name="menu_gallery">BlueTooth</string>
    <string name="menu_slideshow">Control</string>

    <string name="hello_world">Hello world!</string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="Visible">Get Visible</string>
    <string name="List">List Devices</string>
    <string name="Discover">Discover</string>
    <string name="Connect">Connect</string>
    <string name="days">选择天数：</string>
    <string name="add_appliance">Add Appliance</string>
    <string name="name">Name</string>
    <string name="power">Power</string>
    <string name="type">Type</string>
    <string name="save">Save</string>
    <string name="start">START</string>
    <string name="connect">connect</string>
    <string name="connected">connected</string>
    <string name="disconnect">disconnect</string>
    <string name="enter">enter</string>
    <string name="select_operation_type">select_operation_type</string>
    <string name="characteristic">characteristic</string>
    <string name="read">read</string>
    <string name="data_changed">data_changed</string>
    <string name="write">write</string>
    <string name="open_notification">open_notification</string>
    <string name="close_notification">close_notification</string>
    <string name="service_list">service_list</string>
    <string name="characteristic_list">characteristic_list</string>
    <string name="console">console</string>
    <string name="service">service</string>
    <string name="mac">mac</string>
    <string name="input_hex">input_hex</string>
    <string name="start_scan">start_scan</string>
    <string name="stop_scan">stop_scan</string>
    <string name="expand_search_settings">expand_search_settings</string>
    <string name="retrieve_search_settings">retrieve_search_settings</string>
    <string name="connect_fail">connect_fail</string>
    <string name="active_disconnected">active_disconnected</string>
    <string name="disconnected">disconnected</string>
    <string name="please_open_blue">please_open_blue</string>
    <string name="setting">setting</string>
    <string name="scan_setting">scan_setting</string>
    <string name="setting_name">setting_name</string>
    <string name="setting_mac">setting_mac</string>
    <string name="setting_uuid">setting_uuid</string>
    <string name="notifyTitle">notifyTitle</string>
    <string name="gpsNotifyMsg">gpsNotifyMsg</string>
    <string name="cancel">cancel</string>
    <string name="open_fragment_b">Control</string>
    <string name="open_fragment_control">Control</string>

</resources>