<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_user_dialog_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/btn_save"
        android:layout_width="182dp"
        android:layout_height="64dp"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="320dp"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner_type"
        android:layout_width="182dp"
        android:layout_height="64dp"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="464dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/text_name"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:hint="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <EditText
        android:id="@+id/text_power"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:hint="@string/power"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182" />

</androidx.constraintlayout.widget.ConstraintLayout>