<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="on"
                android:text="@string/on" />

            <Button
                android:id="@+id/buttonDisc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="off"
                android:text="@string/Discover" />

            <Button
                android:id="@+id/btnConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Connect" />

            <Button
                android:id="@+id/buttonList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="list"
                android:text="@string/List" />


            <ListView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

            </ListView>

        </LinearLayout>
    </ScrollView>

    <!--
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="初始状态"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="171dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="已配对蓝牙设备如下："
        tools:layout_editor_absoluteX="198dp"
        tools:layout_editor_absoluteY="115dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:text="未配对蓝牙设备如下："
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="84dp"
        tools:ignore="MissingConstraints" />
    -->
</androidx.constraintlayout.widget.ConstraintLayout>